ingress-in-actions/node-pod-research.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
      app: pod-research-service
  name: pod-research
spec:
  type: NodePort
  selector:
      app: pod-research-template
  ports:
  - port: 3000
    targetPort: 3000
